// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`application-submission-date GET /change should render the applicationSubmissionDate change page 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062</span>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full">
                    <form method="POST" novalidate="novalidate">
                        <div class="govuk-form-group">
                            <fieldset class="govuk-fieldset" role="group" aria-describedby="application-submission-date-hint">
                                <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
                                    <h1 class="govuk-fieldset__heading"> What date did you submit your application?</h1>
                                </legend>
                                <div id="application-submission-date-hint" class="govuk-hint">For example, 27 3 2023</div>
                                <div class="govuk-date-input" id="application-submission-date">
                                    <div class="govuk-date-input__item">
                                        <div class="govuk-form-group">
                                            <label class="govuk-label govuk-date-input__label" for="application-submission-date-day">Day</label>
                                            <input class="govuk-input govuk-date-input__input govuk-input--width-2 govuk-input govuk-date-input__input"
                                            id="application-submission-date-day" name="application-submission-date-day"
                                            type="text" value="" inputmode="numeric">
                                        </div>
                                    </div>
                                    <div class="govuk-date-input__item">
                                        <div class="govuk-form-group">
                                            <label class="govuk-label govuk-date-input__label" for="application-submission-date-month">Month</label>
                                            <input class="govuk-input govuk-date-input__input govuk-input--width-2 govuk-input govuk-date-input__input"
                                            id="application-submission-date-month" name="application-submission-date-month"
                                            type="text" value="" inputmode="numeric">
                                        </div>
                                    </div>
                                    <div class="govuk-date-input__item">
                                        <div class="govuk-form-group">
                                            <label class="govuk-label govuk-date-input__label" for="application-submission-date-year">Year</label>
                                            <input class="govuk-input govuk-date-input__input govuk-input--width-4 govuk-input govuk-date-input__input"
                                            id="application-submission-date-year" name="application-submission-date-year"
                                            type="text" value="" inputmode="numeric">
                                        </div>
                                    </div>
                                </div>
                            </fieldset>
                        </div>
                        <button type="submit" data-prevent-double-click="true" class="govuk-button"
                        data-module="govuk-button">Continue</button>
                    </form>
                </div>
            </div>
        </div>
    </div>
</main>"
`;

exports[`application-submission-date POST /change should re-render application submission date change page if day is not valid 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-error-summary" data-module="govuk-error-summary">
                <div role="alert">
                    <h2 class="govuk-error-summary__title"> There is a problem</h2>
                    <div class="govuk-error-summary__body">
                        <ul class="govuk-list govuk-error-summary__list">
                            <li><a href="#application-submission-date-day">Date must include a day</a>
                            </li>
                        </ul>
                    </div>
                </div>
            </div>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062</span>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full">
                    <form method="POST" novalidate="novalidate">
                        <div class="govuk-form-group govuk-form-group--error">
                            <fieldset class="govuk-fieldset" role="group" aria-describedby="application-submission-date-hint application-submission-date-error">
                                <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
                                    <h1 class="govuk-fieldset__heading"> What date did you submit your application?</h1>
                                </legend>
                                <div id="application-submission-date-hint" class="govuk-hint">For example, 27 3 2023</div>
                                <p id="application-submission-date-error"
                                class="govuk-error-message"><span class="govuk-visually-hidden">Error:</span> Date must include a day</p>
                                <div                                 class="govuk-date-input" id="application-submission-date">
                                    <div class="govuk-date-input__item">
                                        <div class="govuk-form-group">
                                            <label class="govuk-label govuk-date-input__label" for="application-submission-date-day">Day</label>
                                            <input class="govuk-input govuk-date-input__input govuk-input--width-2 govuk-input govuk-date-input__input govuk-input--error"
                                            id="application-submission-date-day" name="application-submission-date-day"
                                            type="text" value="" inputmode="numeric">
                                        </div>
                                    </div>
                                    <div class="govuk-date-input__item">
                                        <div class="govuk-form-group">
                                            <label class="govuk-label govuk-date-input__label" for="application-submission-date-month">Month</label>
                                            <input class="govuk-input govuk-date-input__input govuk-input--width-2 govuk-input govuk-date-input__input"
                                            id="application-submission-date-month" name="application-submission-date-month"
                                            type="text" value="" inputmode="numeric">
                                        </div>
                                    </div>
                                    <div class="govuk-date-input__item">
                                        <div class="govuk-form-group">
                                            <label class="govuk-label govuk-date-input__label" for="application-submission-date-year">Year</label>
                                            <input class="govuk-input govuk-date-input__input govuk-input--width-4 govuk-input govuk-date-input__input"
                                            id="application-submission-date-year" name="application-submission-date-year"
                                            type="text" value="" inputmode="numeric">
                                        </div>
                                    </div>
                        </div>
                        </fieldset>
                </div>
                <button type="submit" data-prevent-double-click="true" class="govuk-button"
                data-module="govuk-button">Continue</button>
                </form>
            </div>
        </div>
    </div>
    </div>
</main>"
`;

exports[`application-submission-date POST /change should re-render application submission date change page if day is not valid 2`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-error-summary" data-module="govuk-error-summary">
                <div role="alert">
                    <h2 class="govuk-error-summary__title"> There is a problem</h2>
                    <div class="govuk-error-summary__body">
                        <ul class="govuk-list govuk-error-summary__list">
                            <li><a href="#application-submission-date-day">Date day must be a number</a>
                            </li>
                        </ul>
                    </div>
                </div>
            </div>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062</span>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full">
                    <form method="POST" novalidate="novalidate">
                        <div class="govuk-form-group govuk-form-group--error">
                            <fieldset class="govuk-fieldset" role="group" aria-describedby="application-submission-date-hint application-submission-date-error">
                                <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
                                    <h1 class="govuk-fieldset__heading"> What date did you submit your application?</h1>
                                </legend>
                                <div id="application-submission-date-hint" class="govuk-hint">For example, 27 3 2023</div>
                                <p id="application-submission-date-error"
                                class="govuk-error-message"><span class="govuk-visually-hidden">Error:</span> Date day must be a number</p>
                                <div                                 class="govuk-date-input" id="application-submission-date">
                                    <div class="govuk-date-input__item">
                                        <div class="govuk-form-group">
                                            <label class="govuk-label govuk-date-input__label" for="application-submission-date-day">Day</label>
                                            <input class="govuk-input govuk-date-input__input govuk-input--width-2 govuk-input govuk-date-input__input govuk-input--error"
                                            id="application-submission-date-day" name="application-submission-date-day"
                                            type="text" value="" inputmode="numeric">
                                        </div>
                                    </div>
                                    <div class="govuk-date-input__item">
                                        <div class="govuk-form-group">
                                            <label class="govuk-label govuk-date-input__label" for="application-submission-date-month">Month</label>
                                            <input class="govuk-input govuk-date-input__input govuk-input--width-2 govuk-input govuk-date-input__input"
                                            id="application-submission-date-month" name="application-submission-date-month"
                                            type="text" value="" inputmode="numeric">
                                        </div>
                                    </div>
                                    <div class="govuk-date-input__item">
                                        <div class="govuk-form-group">
                                            <label class="govuk-label govuk-date-input__label" for="application-submission-date-year">Year</label>
                                            <input class="govuk-input govuk-date-input__input govuk-input--width-4 govuk-input govuk-date-input__input"
                                            id="application-submission-date-year" name="application-submission-date-year"
                                            type="text" value="" inputmode="numeric">
                                        </div>
                                    </div>
                        </div>
                        </fieldset>
                </div>
                <button type="submit" data-prevent-double-click="true" class="govuk-button"
                data-module="govuk-button">Continue</button>
                </form>
            </div>
        </div>
    </div>
    </div>
</main>"
`;

exports[`application-submission-date POST /change should re-render application submission date change page if day is not valid 3`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-error-summary" data-module="govuk-error-summary">
                <div role="alert">
                    <h2 class="govuk-error-summary__title"> There is a problem</h2>
                    <div class="govuk-error-summary__body">
                        <ul class="govuk-list govuk-error-summary__list">
                            <li><a href="#application-submission-date-day">Date day must be between 1 and 31</a>
                            </li>
                        </ul>
                    </div>
                </div>
            </div>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062</span>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full">
                    <form method="POST" novalidate="novalidate">
                        <div class="govuk-form-group govuk-form-group--error">
                            <fieldset class="govuk-fieldset" role="group" aria-describedby="application-submission-date-hint application-submission-date-error">
                                <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
                                    <h1 class="govuk-fieldset__heading"> What date did you submit your application?</h1>
                                </legend>
                                <div id="application-submission-date-hint" class="govuk-hint">For example, 27 3 2023</div>
                                <p id="application-submission-date-error"
                                class="govuk-error-message"><span class="govuk-visually-hidden">Error:</span> Date day must be between
                                    1 and 31</p>
                                <div class="govuk-date-input" id="application-submission-date">
                                    <div class="govuk-date-input__item">
                                        <div class="govuk-form-group">
                                            <label class="govuk-label govuk-date-input__label" for="application-submission-date-day">Day</label>
                                            <input class="govuk-input govuk-date-input__input govuk-input--width-2 govuk-input govuk-date-input__input govuk-input--error"
                                            id="application-submission-date-day" name="application-submission-date-day"
                                            type="text" value="" inputmode="numeric">
                                        </div>
                                    </div>
                                    <div class="govuk-date-input__item">
                                        <div class="govuk-form-group">
                                            <label class="govuk-label govuk-date-input__label" for="application-submission-date-month">Month</label>
                                            <input class="govuk-input govuk-date-input__input govuk-input--width-2 govuk-input govuk-date-input__input"
                                            id="application-submission-date-month" name="application-submission-date-month"
                                            type="text" value="" inputmode="numeric">
                                        </div>
                                    </div>
                                    <div class="govuk-date-input__item">
                                        <div class="govuk-form-group">
                                            <label class="govuk-label govuk-date-input__label" for="application-submission-date-year">Year</label>
                                            <input class="govuk-input govuk-date-input__input govuk-input--width-4 govuk-input govuk-date-input__input"
                                            id="application-submission-date-year" name="application-submission-date-year"
                                            type="text" value="" inputmode="numeric">
                                        </div>
                                    </div>
                                </div>
                            </fieldset>
                        </div>
                        <button type="submit" data-prevent-double-click="true" class="govuk-button"
                        data-module="govuk-button">Continue</button>
                    </form>
                </div>
            </div>
        </div>
    </div>
</main>"
`;

exports[`application-submission-date POST /change should re-render application submission date change page if day is not valid 4`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-error-summary" data-module="govuk-error-summary">
                <div role="alert">
                    <h2 class="govuk-error-summary__title"> There is a problem</h2>
                    <div class="govuk-error-summary__body">
                        <ul class="govuk-list govuk-error-summary__list">
                            <li><a href="#application-submission-date-day">Date day must be between 1 and 31</a>
                            </li>
                        </ul>
                    </div>
                </div>
            </div>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062</span>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full">
                    <form method="POST" novalidate="novalidate">
                        <div class="govuk-form-group govuk-form-group--error">
                            <fieldset class="govuk-fieldset" role="group" aria-describedby="application-submission-date-hint application-submission-date-error">
                                <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
                                    <h1 class="govuk-fieldset__heading"> What date did you submit your application?</h1>
                                </legend>
                                <div id="application-submission-date-hint" class="govuk-hint">For example, 27 3 2023</div>
                                <p id="application-submission-date-error"
                                class="govuk-error-message"><span class="govuk-visually-hidden">Error:</span> Date day must be between
                                    1 and 31</p>
                                <div class="govuk-date-input" id="application-submission-date">
                                    <div class="govuk-date-input__item">
                                        <div class="govuk-form-group">
                                            <label class="govuk-label govuk-date-input__label" for="application-submission-date-day">Day</label>
                                            <input class="govuk-input govuk-date-input__input govuk-input--width-2 govuk-input govuk-date-input__input govuk-input--error"
                                            id="application-submission-date-day" name="application-submission-date-day"
                                            type="text" value="" inputmode="numeric">
                                        </div>
                                    </div>
                                    <div class="govuk-date-input__item">
                                        <div class="govuk-form-group">
                                            <label class="govuk-label govuk-date-input__label" for="application-submission-date-month">Month</label>
                                            <input class="govuk-input govuk-date-input__input govuk-input--width-2 govuk-input govuk-date-input__input"
                                            id="application-submission-date-month" name="application-submission-date-month"
                                            type="text" value="" inputmode="numeric">
                                        </div>
                                    </div>
                                    <div class="govuk-date-input__item">
                                        <div class="govuk-form-group">
                                            <label class="govuk-label govuk-date-input__label" for="application-submission-date-year">Year</label>
                                            <input class="govuk-input govuk-date-input__input govuk-input--width-4 govuk-input govuk-date-input__input"
                                            id="application-submission-date-year" name="application-submission-date-year"
                                            type="text" value="" inputmode="numeric">
                                        </div>
                                    </div>
                                </div>
                            </fieldset>
                        </div>
                        <button type="submit" data-prevent-double-click="true" class="govuk-button"
                        data-module="govuk-button">Continue</button>
                    </form>
                </div>
            </div>
        </div>
    </div>
</main>"
`;

exports[`application-submission-date POST /change should re-render the Date page with an error message if the provided date month is invalid 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-error-summary" data-module="govuk-error-summary">
                <div role="alert">
                    <h2 class="govuk-error-summary__title"> There is a problem</h2>
                    <div class="govuk-error-summary__body">
                        <ul class="govuk-list govuk-error-summary__list">
                            <li><a href="#application-submission-date-month">Date must include a month</a>
                            </li>
                        </ul>
                    </div>
                </div>
            </div>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062</span>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full">
                    <form method="POST" novalidate="novalidate">
                        <div class="govuk-form-group govuk-form-group--error">
                            <fieldset class="govuk-fieldset" role="group" aria-describedby="application-submission-date-hint application-submission-date-error">
                                <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
                                    <h1 class="govuk-fieldset__heading"> What date did you submit your application?</h1>
                                </legend>
                                <div id="application-submission-date-hint" class="govuk-hint">For example, 27 3 2023</div>
                                <p id="application-submission-date-error"
                                class="govuk-error-message"><span class="govuk-visually-hidden">Error:</span> Date must include a month</p>
                                <div                                 class="govuk-date-input" id="application-submission-date">
                                    <div class="govuk-date-input__item">
                                        <div class="govuk-form-group">
                                            <label class="govuk-label govuk-date-input__label" for="application-submission-date-day">Day</label>
                                            <input class="govuk-input govuk-date-input__input govuk-input--width-2 govuk-input govuk-date-input__input"
                                            id="application-submission-date-day" name="application-submission-date-day"
                                            type="text" value="" inputmode="numeric">
                                        </div>
                                    </div>
                                    <div class="govuk-date-input__item">
                                        <div class="govuk-form-group">
                                            <label class="govuk-label govuk-date-input__label" for="application-submission-date-month">Month</label>
                                            <input class="govuk-input govuk-date-input__input govuk-input--width-2 govuk-input govuk-date-input__input govuk-input--error"
                                            id="application-submission-date-month" name="application-submission-date-month"
                                            type="text" value="" inputmode="numeric">
                                        </div>
                                    </div>
                                    <div class="govuk-date-input__item">
                                        <div class="govuk-form-group">
                                            <label class="govuk-label govuk-date-input__label" for="application-submission-date-year">Year</label>
                                            <input class="govuk-input govuk-date-input__input govuk-input--width-4 govuk-input govuk-date-input__input"
                                            id="application-submission-date-year" name="application-submission-date-year"
                                            type="text" value="" inputmode="numeric">
                                        </div>
                                    </div>
                        </div>
                        </fieldset>
                </div>
                <button type="submit" data-prevent-double-click="true" class="govuk-button"
                data-module="govuk-button">Continue</button>
                </form>
            </div>
        </div>
    </div>
    </div>
</main>"
`;

exports[`application-submission-date POST /change should re-render the Date page with an error message if the provided date month is invalid 2`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-error-summary" data-module="govuk-error-summary">
                <div role="alert">
                    <h2 class="govuk-error-summary__title"> There is a problem</h2>
                    <div class="govuk-error-summary__body">
                        <ul class="govuk-list govuk-error-summary__list">
                            <li><a href="#application-submission-date-month">Date month must be a number</a>
                            </li>
                        </ul>
                    </div>
                </div>
            </div>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062</span>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full">
                    <form method="POST" novalidate="novalidate">
                        <div class="govuk-form-group govuk-form-group--error">
                            <fieldset class="govuk-fieldset" role="group" aria-describedby="application-submission-date-hint application-submission-date-error">
                                <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
                                    <h1 class="govuk-fieldset__heading"> What date did you submit your application?</h1>
                                </legend>
                                <div id="application-submission-date-hint" class="govuk-hint">For example, 27 3 2023</div>
                                <p id="application-submission-date-error"
                                class="govuk-error-message"><span class="govuk-visually-hidden">Error:</span> Date month must be a
                                    number</p>
                                <div class="govuk-date-input" id="application-submission-date">
                                    <div class="govuk-date-input__item">
                                        <div class="govuk-form-group">
                                            <label class="govuk-label govuk-date-input__label" for="application-submission-date-day">Day</label>
                                            <input class="govuk-input govuk-date-input__input govuk-input--width-2 govuk-input govuk-date-input__input"
                                            id="application-submission-date-day" name="application-submission-date-day"
                                            type="text" value="" inputmode="numeric">
                                        </div>
                                    </div>
                                    <div class="govuk-date-input__item">
                                        <div class="govuk-form-group">
                                            <label class="govuk-label govuk-date-input__label" for="application-submission-date-month">Month</label>
                                            <input class="govuk-input govuk-date-input__input govuk-input--width-2 govuk-input govuk-date-input__input govuk-input--error"
                                            id="application-submission-date-month" name="application-submission-date-month"
                                            type="text" value="" inputmode="numeric">
                                        </div>
                                    </div>
                                    <div class="govuk-date-input__item">
                                        <div class="govuk-form-group">
                                            <label class="govuk-label govuk-date-input__label" for="application-submission-date-year">Year</label>
                                            <input class="govuk-input govuk-date-input__input govuk-input--width-4 govuk-input govuk-date-input__input"
                                            id="application-submission-date-year" name="application-submission-date-year"
                                            type="text" value="" inputmode="numeric">
                                        </div>
                                    </div>
                                </div>
                            </fieldset>
                        </div>
                        <button type="submit" data-prevent-double-click="true" class="govuk-button"
                        data-module="govuk-button">Continue</button>
                    </form>
                </div>
            </div>
        </div>
    </div>
</main>"
`;

exports[`application-submission-date POST /change should re-render the Date page with an error message if the provided date month is invalid 3`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-error-summary" data-module="govuk-error-summary">
                <div role="alert">
                    <h2 class="govuk-error-summary__title"> There is a problem</h2>
                    <div class="govuk-error-summary__body">
                        <ul class="govuk-list govuk-error-summary__list">
                            <li><a href="#application-submission-date-month">Date month must be between 1 and 12</a>
                            </li>
                        </ul>
                    </div>
                </div>
            </div>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062</span>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full">
                    <form method="POST" novalidate="novalidate">
                        <div class="govuk-form-group govuk-form-group--error">
                            <fieldset class="govuk-fieldset" role="group" aria-describedby="application-submission-date-hint application-submission-date-error">
                                <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
                                    <h1 class="govuk-fieldset__heading"> What date did you submit your application?</h1>
                                </legend>
                                <div id="application-submission-date-hint" class="govuk-hint">For example, 27 3 2023</div>
                                <p id="application-submission-date-error"
                                class="govuk-error-message"><span class="govuk-visually-hidden">Error:</span> Date month must be between
                                    1 and 12</p>
                                <div class="govuk-date-input" id="application-submission-date">
                                    <div class="govuk-date-input__item">
                                        <div class="govuk-form-group">
                                            <label class="govuk-label govuk-date-input__label" for="application-submission-date-day">Day</label>
                                            <input class="govuk-input govuk-date-input__input govuk-input--width-2 govuk-input govuk-date-input__input"
                                            id="application-submission-date-day" name="application-submission-date-day"
                                            type="text" value="" inputmode="numeric">
                                        </div>
                                    </div>
                                    <div class="govuk-date-input__item">
                                        <div class="govuk-form-group">
                                            <label class="govuk-label govuk-date-input__label" for="application-submission-date-month">Month</label>
                                            <input class="govuk-input govuk-date-input__input govuk-input--width-2 govuk-input govuk-date-input__input govuk-input--error"
                                            id="application-submission-date-month" name="application-submission-date-month"
                                            type="text" value="" inputmode="numeric">
                                        </div>
                                    </div>
                                    <div class="govuk-date-input__item">
                                        <div class="govuk-form-group">
                                            <label class="govuk-label govuk-date-input__label" for="application-submission-date-year">Year</label>
                                            <input class="govuk-input govuk-date-input__input govuk-input--width-4 govuk-input govuk-date-input__input"
                                            id="application-submission-date-year" name="application-submission-date-year"
                                            type="text" value="" inputmode="numeric">
                                        </div>
                                    </div>
                                </div>
                            </fieldset>
                        </div>
                        <button type="submit" data-prevent-double-click="true" class="govuk-button"
                        data-module="govuk-button">Continue</button>
                    </form>
                </div>
            </div>
        </div>
    </div>
</main>"
`;

exports[`application-submission-date POST /change should re-render the Date page with an error message if the provided date month is invalid 4`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-error-summary" data-module="govuk-error-summary">
                <div role="alert">
                    <h2 class="govuk-error-summary__title"> There is a problem</h2>
                    <div class="govuk-error-summary__body">
                        <ul class="govuk-list govuk-error-summary__list">
                            <li><a href="#application-submission-date-month">Date month must be between 1 and 12</a>
                            </li>
                        </ul>
                    </div>
                </div>
            </div>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062</span>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full">
                    <form method="POST" novalidate="novalidate">
                        <div class="govuk-form-group govuk-form-group--error">
                            <fieldset class="govuk-fieldset" role="group" aria-describedby="application-submission-date-hint application-submission-date-error">
                                <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
                                    <h1 class="govuk-fieldset__heading"> What date did you submit your application?</h1>
                                </legend>
                                <div id="application-submission-date-hint" class="govuk-hint">For example, 27 3 2023</div>
                                <p id="application-submission-date-error"
                                class="govuk-error-message"><span class="govuk-visually-hidden">Error:</span> Date month must be between
                                    1 and 12</p>
                                <div class="govuk-date-input" id="application-submission-date">
                                    <div class="govuk-date-input__item">
                                        <div class="govuk-form-group">
                                            <label class="govuk-label govuk-date-input__label" for="application-submission-date-day">Day</label>
                                            <input class="govuk-input govuk-date-input__input govuk-input--width-2 govuk-input govuk-date-input__input"
                                            id="application-submission-date-day" name="application-submission-date-day"
                                            type="text" value="" inputmode="numeric">
                                        </div>
                                    </div>
                                    <div class="govuk-date-input__item">
                                        <div class="govuk-form-group">
                                            <label class="govuk-label govuk-date-input__label" for="application-submission-date-month">Month</label>
                                            <input class="govuk-input govuk-date-input__input govuk-input--width-2 govuk-input govuk-date-input__input govuk-input--error"
                                            id="application-submission-date-month" name="application-submission-date-month"
                                            type="text" value="" inputmode="numeric">
                                        </div>
                                    </div>
                                    <div class="govuk-date-input__item">
                                        <div class="govuk-form-group">
                                            <label class="govuk-label govuk-date-input__label" for="application-submission-date-year">Year</label>
                                            <input class="govuk-input govuk-date-input__input govuk-input--width-4 govuk-input govuk-date-input__input"
                                            id="application-submission-date-year" name="application-submission-date-year"
                                            type="text" value="" inputmode="numeric">
                                        </div>
                                    </div>
                                </div>
                            </fieldset>
                        </div>
                        <button type="submit" data-prevent-double-click="true" class="govuk-button"
                        data-module="govuk-button">Continue</button>
                    </form>
                </div>
            </div>
        </div>
    </div>
</main>"
`;

exports[`application-submission-date POST /change should re-render the Date page with an error message if the provided date year is invalid 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-error-summary" data-module="govuk-error-summary">
                <div role="alert">
                    <h2 class="govuk-error-summary__title"> There is a problem</h2>
                    <div class="govuk-error-summary__body">
                        <ul class="govuk-list govuk-error-summary__list">
                            <li><a href="#application-submission-date-year">Date must include a year</a>
                            </li>
                        </ul>
                    </div>
                </div>
            </div>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062</span>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full">
                    <form method="POST" novalidate="novalidate">
                        <div class="govuk-form-group govuk-form-group--error">
                            <fieldset class="govuk-fieldset" role="group" aria-describedby="application-submission-date-hint application-submission-date-error">
                                <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
                                    <h1 class="govuk-fieldset__heading"> What date did you submit your application?</h1>
                                </legend>
                                <div id="application-submission-date-hint" class="govuk-hint">For example, 27 3 2023</div>
                                <p id="application-submission-date-error"
                                class="govuk-error-message"><span class="govuk-visually-hidden">Error:</span> Date must include a year</p>
                                <div                                 class="govuk-date-input" id="application-submission-date">
                                    <div class="govuk-date-input__item">
                                        <div class="govuk-form-group">
                                            <label class="govuk-label govuk-date-input__label" for="application-submission-date-day">Day</label>
                                            <input class="govuk-input govuk-date-input__input govuk-input--width-2 govuk-input govuk-date-input__input"
                                            id="application-submission-date-day" name="application-submission-date-day"
                                            type="text" value="" inputmode="numeric">
                                        </div>
                                    </div>
                                    <div class="govuk-date-input__item">
                                        <div class="govuk-form-group">
                                            <label class="govuk-label govuk-date-input__label" for="application-submission-date-month">Month</label>
                                            <input class="govuk-input govuk-date-input__input govuk-input--width-2 govuk-input govuk-date-input__input"
                                            id="application-submission-date-month" name="application-submission-date-month"
                                            type="text" value="" inputmode="numeric">
                                        </div>
                                    </div>
                                    <div class="govuk-date-input__item">
                                        <div class="govuk-form-group">
                                            <label class="govuk-label govuk-date-input__label" for="application-submission-date-year">Year</label>
                                            <input class="govuk-input govuk-date-input__input govuk-input--width-4 govuk-input govuk-date-input__input govuk-input--error"
                                            id="application-submission-date-year" name="application-submission-date-year"
                                            type="text" value="" inputmode="numeric">
                                        </div>
                                    </div>
                        </div>
                        </fieldset>
                </div>
                <button type="submit" data-prevent-double-click="true" class="govuk-button"
                data-module="govuk-button">Continue</button>
                </form>
            </div>
        </div>
    </div>
    </div>
</main>"
`;

exports[`application-submission-date POST /change should re-render the Date page with an error message if the provided date year is invalid 2`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-error-summary" data-module="govuk-error-summary">
                <div role="alert">
                    <h2 class="govuk-error-summary__title"> There is a problem</h2>
                    <div class="govuk-error-summary__body">
                        <ul class="govuk-list govuk-error-summary__list">
                            <li><a href="#application-submission-date-year">Date year must be a number</a>
                            </li>
                        </ul>
                    </div>
                </div>
            </div>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062</span>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full">
                    <form method="POST" novalidate="novalidate">
                        <div class="govuk-form-group govuk-form-group--error">
                            <fieldset class="govuk-fieldset" role="group" aria-describedby="application-submission-date-hint application-submission-date-error">
                                <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
                                    <h1 class="govuk-fieldset__heading"> What date did you submit your application?</h1>
                                </legend>
                                <div id="application-submission-date-hint" class="govuk-hint">For example, 27 3 2023</div>
                                <p id="application-submission-date-error"
                                class="govuk-error-message"><span class="govuk-visually-hidden">Error:</span> Date year must be a number</p>
                                <div                                 class="govuk-date-input" id="application-submission-date">
                                    <div class="govuk-date-input__item">
                                        <div class="govuk-form-group">
                                            <label class="govuk-label govuk-date-input__label" for="application-submission-date-day">Day</label>
                                            <input class="govuk-input govuk-date-input__input govuk-input--width-2 govuk-input govuk-date-input__input"
                                            id="application-submission-date-day" name="application-submission-date-day"
                                            type="text" value="" inputmode="numeric">
                                        </div>
                                    </div>
                                    <div class="govuk-date-input__item">
                                        <div class="govuk-form-group">
                                            <label class="govuk-label govuk-date-input__label" for="application-submission-date-month">Month</label>
                                            <input class="govuk-input govuk-date-input__input govuk-input--width-2 govuk-input govuk-date-input__input"
                                            id="application-submission-date-month" name="application-submission-date-month"
                                            type="text" value="" inputmode="numeric">
                                        </div>
                                    </div>
                                    <div class="govuk-date-input__item">
                                        <div class="govuk-form-group">
                                            <label class="govuk-label govuk-date-input__label" for="application-submission-date-year">Year</label>
                                            <input class="govuk-input govuk-date-input__input govuk-input--width-4 govuk-input govuk-date-input__input govuk-input--error"
                                            id="application-submission-date-year" name="application-submission-date-year"
                                            type="text" value="" inputmode="numeric">
                                        </div>
                                    </div>
                        </div>
                        </fieldset>
                </div>
                <button type="submit" data-prevent-double-click="true" class="govuk-button"
                data-module="govuk-button">Continue</button>
                </form>
            </div>
        </div>
    </div>
    </div>
</main>"
`;

exports[`application-submission-date POST /change should re-render the Date page with an error message if the provided date year is invalid 3`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-error-summary" data-module="govuk-error-summary">
                <div role="alert">
                    <h2 class="govuk-error-summary__title"> There is a problem</h2>
                    <div class="govuk-error-summary__body">
                        <ul class="govuk-list govuk-error-summary__list">
                            <li><a href="#application-submission-date-year">Date year must be 4 digits</a>
                            </li>
                        </ul>
                    </div>
                </div>
            </div>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062</span>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full">
                    <form method="POST" novalidate="novalidate">
                        <div class="govuk-form-group govuk-form-group--error">
                            <fieldset class="govuk-fieldset" role="group" aria-describedby="application-submission-date-hint application-submission-date-error">
                                <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
                                    <h1 class="govuk-fieldset__heading"> What date did you submit your application?</h1>
                                </legend>
                                <div id="application-submission-date-hint" class="govuk-hint">For example, 27 3 2023</div>
                                <p id="application-submission-date-error"
                                class="govuk-error-message"><span class="govuk-visually-hidden">Error:</span> Date year must be 4 digits</p>
                                <div                                 class="govuk-date-input" id="application-submission-date">
                                    <div class="govuk-date-input__item">
                                        <div class="govuk-form-group">
                                            <label class="govuk-label govuk-date-input__label" for="application-submission-date-day">Day</label>
                                            <input class="govuk-input govuk-date-input__input govuk-input--width-2 govuk-input govuk-date-input__input"
                                            id="application-submission-date-day" name="application-submission-date-day"
                                            type="text" value="" inputmode="numeric">
                                        </div>
                                    </div>
                                    <div class="govuk-date-input__item">
                                        <div class="govuk-form-group">
                                            <label class="govuk-label govuk-date-input__label" for="application-submission-date-month">Month</label>
                                            <input class="govuk-input govuk-date-input__input govuk-input--width-2 govuk-input govuk-date-input__input"
                                            id="application-submission-date-month" name="application-submission-date-month"
                                            type="text" value="" inputmode="numeric">
                                        </div>
                                    </div>
                                    <div class="govuk-date-input__item">
                                        <div class="govuk-form-group">
                                            <label class="govuk-label govuk-date-input__label" for="application-submission-date-year">Year</label>
                                            <input class="govuk-input govuk-date-input__input govuk-input--width-4 govuk-input govuk-date-input__input govuk-input--error"
                                            id="application-submission-date-year" name="application-submission-date-year"
                                            type="text" value="" inputmode="numeric">
                                        </div>
                                    </div>
                        </div>
                        </fieldset>
                </div>
                <button type="submit" data-prevent-double-click="true" class="govuk-button"
                data-module="govuk-button">Continue</button>
                </form>
            </div>
        </div>
    </div>
    </div>
</main>"
`;

exports[`application-submission-date POST /change should re-render the Date page with an error message if the provided date year is invalid 4`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-error-summary" data-module="govuk-error-summary">
                <div role="alert">
                    <h2 class="govuk-error-summary__title"> There is a problem</h2>
                    <div class="govuk-error-summary__body">
                        <ul class="govuk-list govuk-error-summary__list">
                            <li><a href="#application-submission-date-day">Date must be today or in the past</a>
                            </li>
                        </ul>
                    </div>
                </div>
            </div>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062</span>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full">
                    <form method="POST" novalidate="novalidate">
                        <div class="govuk-form-group govuk-form-group--error">
                            <fieldset class="govuk-fieldset" role="group" aria-describedby="application-submission-date-hint application-submission-date-error">
                                <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
                                    <h1 class="govuk-fieldset__heading"> What date did you submit your application?</h1>
                                </legend>
                                <div id="application-submission-date-hint" class="govuk-hint">For example, 27 3 2023</div>
                                <p id="application-submission-date-error"
                                class="govuk-error-message"><span class="govuk-visually-hidden">Error:</span> Date must be today or
                                    in the past</p>
                                <div class="govuk-date-input" id="application-submission-date">
                                    <div class="govuk-date-input__item">
                                        <div class="govuk-form-group">
                                            <label class="govuk-label govuk-date-input__label" for="application-submission-date-day">Day</label>
                                            <input class="govuk-input govuk-date-input__input govuk-input--width-2 govuk-input govuk-date-input__input govuk-input--error"
                                            id="application-submission-date-day" name="application-submission-date-day"
                                            type="text" value="" inputmode="numeric">
                                        </div>
                                    </div>
                                    <div class="govuk-date-input__item">
                                        <div class="govuk-form-group">
                                            <label class="govuk-label govuk-date-input__label" for="application-submission-date-month">Month</label>
                                            <input class="govuk-input govuk-date-input__input govuk-input--width-2 govuk-input govuk-date-input__input govuk-input--error"
                                            id="application-submission-date-month" name="application-submission-date-month"
                                            type="text" value="" inputmode="numeric">
                                        </div>
                                    </div>
                                    <div class="govuk-date-input__item">
                                        <div class="govuk-form-group">
                                            <label class="govuk-label govuk-date-input__label" for="application-submission-date-year">Year</label>
                                            <input class="govuk-input govuk-date-input__input govuk-input--width-4 govuk-input govuk-date-input__input govuk-input--error"
                                            id="application-submission-date-year" name="application-submission-date-year"
                                            type="text" value="" inputmode="numeric">
                                        </div>
                                    </div>
                                </div>
                            </fieldset>
                        </div>
                        <button type="submit" data-prevent-double-click="true" class="govuk-button"
                        data-module="govuk-button">Continue</button>
                    </form>
                </div>
            </div>
        </div>
    </div>
</main>"
`;
